# TerraGearGUI-QT5

./: .gitignore  CMakeLists.txt  LICENSE  README  TODO  TerraGUI.pro  fgfsconstruct.ui  genapts.ui  hgtchop.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newbucket.cpp  newbucket.h  ogrdecode.ui  tggui_utils.cpp  tggui_utils.h
QMapControl/: qmapcontrol.h
QMapControl/src/: layermanager.cpp  mapcontrol.cpp  mapcontrol.h
src/: airportsTab.cpp  constructTab.cpp  downloadManager.cpp  downloadTab.cpp  elevationTab.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialsTab.cpp  menu.cpp  newbucket.h  startTab.cpp  tggui_utils.cpp
src/QMapControl/: qmapcontrol.h
src/QMapControl/src/: imagemanager.cpp  layer.cpp  layermanager.cpp  mapcontrol.cpp  mapcontrol.h  mapnetwork.cpp  mapnetwork.h  tilemapadapter.cpp
